# CG

./: .gitignore  README.md  meson.build
examples/: camera_fps.c  cube.c  meson.build  obj_loading.c  triangle.c  triangle_input.c  triangle_tex.c  triangle_transform.c
examples/resources/: suzzanne.mtl
include/: cg_core.h  cg_gfx.h  cg_input.h  cg_math.h  cg_util.h  meson.build
resources/: meson.build
resources/shaders/: frag.glsl  vert.glsl
src/: cg_core.c  cg_gfx.c  cg_input.c  cg_math.c  cg_util.c  meson.build
